Adding/Updating fruit bush

--- a/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
+++ b/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
@@ -25,6 +25,7 @@
   "block.thornstitanexpansion.aquamarine_block": "Aquamarine Block",
   "block.thornstitanexpansion.red_beryl_block": "Red Beryl Block",
 
+  "block.thornstitanexpansion.juicy_berry_bush": "Juicy Berry Bush",
   "block.thornstitanexpansion.magic_workbench": "Magic Workbench",
 
   "itemGroup.thornstitanexpansion.ttegroup": "Thorn's Titan Expansion"
