Add Gem Light infrastructure

--- a/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
+++ b/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
@@ -26,6 +26,12 @@
   "block.thornstitanexpansion.aquamarine_block": "Aquamarine Block",
   "block.thornstitanexpansion.red_beryl_block": "Red Beryl Block",
 
+  "block.thornstitanexpansion.peridot_gem_light": "Peridot Gem Light",
+  "block.thornstitanexpansion.aquamarine_gem_light": "Aquamarine Gem Light",
+  "block.thornstitanexpansion.red_beryl_gem_light": "Red Beryl Gem Light",
+  "block.thornstitanexpansion.topaz_gem_light": "Topaz Gem Light",
+  "block.thornstitanexpansion.amethyst_gem_light": "Amethyst Gem Light",
+
   "block.thornstitanexpansion.juicy_berry_bush": "Juicy Berry Bush",
   "block.thornstitanexpansion.magic_workbench": "Magic Workbench",
 
