Fixed object texture issue for amethyst ores

--- a/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
+++ b/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
@@ -20,11 +20,14 @@
   "block.thornstitanexpansion.deepslate_red_beryl_ore": "Deepslate Red Beryl Ore",
   "block.thornstitanexpansion.topaz_ore": "Topaz Ore",
   "block.thornstitanexpansion.deepslate_topaz_ore": "Deepslate Topaz Ore",
+  "block.thornstitanexpansion.amethyst_ore": "Amethyst Ore",
+  "block.thornstitanexpansion.deepslate_amethyst_ore": "Deepslate Amethyst Ore",
 
   "block.thornstitanexpansion.peridot_block": "Peridot Block",
   "block.thornstitanexpansion.topaz_block": "Topaz Block",
   "block.thornstitanexpansion.aquamarine_block": "Aquamarine Block",
   "block.thornstitanexpansion.red_beryl_block": "Red Beryl Block",
+  "block.thornstitanexpansion.amethyst_block": "Amethyst Block",
 
   "block.thornstitanexpansion.peridot_gem_light": "Peridot Gem Light",
   "block.thornstitanexpansion.aquamarine_gem_light": "Aquamarine Gem Light",
