Fixed lang file for raw amethyst

--- a/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
+++ b/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
@@ -8,7 +8,7 @@
   "item.thornstitanexpansion.raw_topaz": "Raw Topaz",
   "item.thornstitanexpansion.raw_aquamarine": "Raw Aquamarine",
   "item.thornstitanexpansion.raw_red_beryl": "Raw Red Beryl",
-  "item.thornsTitanexpansion.raw_amethyst": "Raw Amethyst",
+  "item.thornstitanexpansion.raw_amethyst": "Raw Amethyst",
 
   "item.thornstitanexpansion.peridot_sword": "Peridot Sword",
 
