lang file update

--- a/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
+++ b/src/main/resources/assets/thornstitanexpansion/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.thornstitanexpansion.topaz": "Topaz",
   "item.thornstitanexpansion.aquamarine": "Aquamarine",
   "item.thornstitanexpansion.red_beryl": "Red Beryl",
+  "item.thornstitanexpansion.amethyst": "Amethyst",
 
   "item.thornstitanexpansion.raw_peridot": "Raw Peridot",
   "item.thornstitanexpansion.raw_topaz": "Raw Topaz",
